$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Fix bug [ 1814525 ] Repeating event deletion
 - Apply PATCH [ 1802793 ] iCS export - LDAP - Empty Attendee's info
 - Security fix 1826571: misc XSS issues
 - Modified iCalendar output to correct ATTENDEE output to conform to
   RFC2445; fixed attendee to user login if no fullname info available.
 - Modified iCalendar output to avoid bug in Sunbird 0.7.
 - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
 - Added new rss_unapproved.php that will generate RSS 2.0 listing
   of unapproved events.
 - Apply PATCH [ 1878014 ] Fix selectDate() JavaScript function
 - Security fix: Better cleansing of search.php 'adv' parameter
 - Security fix: do not allow certain HTML tags in event descriptions
   such as SCRIPT, META, LINK, OBJECT, APPLET and others.
 - Fix bug: set default translation to 'English-US.txt', which seems to
   avoid the "No such translation" error for some pages (icalclient.php).
 - Fix bug [ 1840084 ] 'External participants' is not at the left margin like
 - Apply PATCH [ 1836703 ] a few corrections to Italian.txt
 - Apply PATCH [ 1834400 ] some corrections to Italian.txt
 - Apply PATCH [ 1834285 ] All remaning items for Italian.txt
 - Partial fix bug [ 1832024 ] Notice: Undefined variable: LANGUAGE in /var/www/webcalendar/includes/translate.php
   (Forgot to set $LANGUAGE global in function translate.
    And, some things seem to be getting translated more than once.)
 - Add support for Czech UTF8
 - Fix bug [ 1830952 ] Cannot add events - Error, during execute Query
 - Fix bug [ 1737128 ] From notification to "not authorized"
 - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
 - Fix bug [ 1829125 ] I can not add external calendars
 - Fix bug [ 1792313 ] Installation wizard step 1 shows wrong colors